--- a/link.html
+++ b/link.html
@@ -9,15 +9,21 @@
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <style>
-        html, body{
-            background:#222;
-            color:#ddd;
-            font-size:2em;
-		display: flex;
-		flex-direction:column;
-		align-items:center;
+        *{
+    		margin:0;
+    		padding:0;
+    	    	box-sizing:border-box;
+    	}
+    	body{
+    		height:90vh;
+    		width:90vw;
+                background:#222;
+                color:#ddd;
+    		display: flex;
+    		flex-direction:column;
+    		align-items:center;
 		justify-content:center;
-          }
+      	}
     </style>
 </head>
 
@@ -31,10 +37,11 @@
         		let ploc = window.location.href;
         		let pcode = ploc.substr(ploc.indexOf("#") + 1);
         		let linkLoc = linkList[pcode];
-        		    let i = 5;
-        		    setTimeout(function(){  if(i > 0){i--; document.getElementById("ct").html(i); }
-        					  else{window.location.href = linkLoc;}
-        		 	}, 1000);
+        		let ct = 5;
+        		setTimeout(function(){
+				if(ct< 0){ct = ct - 1; document.getElementById("ct").html(ct); }
+			  	else{window.location.href = linkLoc;}
+			}, 1000);
     </script>
 </body>
 
