Update and rename link.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Untitled</title>
+    <title>PushpaLinks | Wait</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +16,7 @@
     	}
     	body{
     		height:90vh;
-    		width:90vw;
+    		width:100vw;
                 background:#222;
                 color:#ddd;
     		display: flex;
@@ -24,6 +24,9 @@
     		align-items:center;
 		justify-content:center;
       	}
+	p{
+		text-align:center;
+    	}
     </style>
 </head>
 
